2011-02-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Tidy up some debugging hooks.

	* src/debug.h (DEBUG_INVOKED): New macro; define it.
	(DEBUG_INVOKE_IF): Likewise; this takes arguments providing for
	conditional invocation of code when DEBUGLEVEL is non-zero; make it
	expand to nothing, when DEBUGLEVEL is zero.
	(DEBUG_TRACE_INIT): Redefined macro; value changed to 0x0010.
	(DEBUG_TRACE_TRANSACTIONS, DEBUG_SUPPRESS_INSTALLATION):
	(DEBUG_UPDATE_INVENTORY): New macros; define them.

	* src/tarproc.cpp (pkgTarArchiveInstaller::ProcessDirectory):
	(pkgTarArchiveInstaller::ProcessDataStream): Refactor debugging hooks;
	implement them in terms of DEBUGLEVEL, with reference to...
	(DEBUG_SUPPRESS_INSTALLATION, DEBUG_UPDATE_INVENTORY): ...these.

2011-02-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make package version comparisons more robust.

	Fixes an issue reported by Chris Sutcliffe: previously, version
	comparisons were evaluated solely on the basis of differences in the
	package version field itself.  Henceforth, if this field compares as
	equal, then the comparison is extended to also consider differences
	between development phase qualifiers, and, if these too compare as
	equal, to differences in the target subsystem version fields.

	* src/pkginfo/pkginfo.h (pkgSpecs::VersionComparator): New private
	method; declare it.

	* src/pkgspec.cpp (pkgSpecs::VersionComparator): Implement it.
	(pkgSpecs::operator<, pkgSpecs::operator<=, pkgSpecs::operator>=):
	(pkgSpecs::operator>): Use it, replacing...
	(version): ...this static function; now unreferenced; delete it.

	* src/vercmp.h (pkgVersionInfo::pkgVersionInfo): Make it inline; it
	now delegates the entire class construction operation to...
	(pkgVersionInfo::Parse): ...this new private method; declare it.  This
	is also used to facilitate implementation of...
	(pkgVersionInfo::Reset): ...this new inline method, also requiring...