@@ -34,6 +34,14 @@ User Visible Changes for mingw-get-0.1-mingw32-alpha-5
   more meaningful diagnostics when mingw-get is invoked without arguments,
   and corrects some omissions from the source tarball.
 
+- The follow-up release, designated as mingw-get-0.1-mingw32-alpha-5.2,
+  is a further bug-fix release.  It provides a work-around for a defect
+  in the console I/O handling of MSYS mintty and MSYS rxvt, which causes
+  the stderr stream to appear to be inappropriately buffered within either
+  of these terminal emulators.  As such, it is a recommended upgrade for
+  users of either of these emulators; it offers no tangible benefit to
+  other users.
+
 
 ===============================================
 
